<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.masterthesis.personaldata.symptoms.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings_activate_api_consumption"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/activate_moves_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_moves_switch" />

    <Switch
        android:id="@+id/activate_lifelog_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_lifelog_switch" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings_activate_flic"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/activate_flic_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_flic_switch" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings_mode_text"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/no_mode">

        <RadioButton
            android:id="@+id/no_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_no_mode" />

        <RadioButton
            android:id="@+id/binary_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_binary_mode" />

        <RadioButton
            android:id="@+id/full_button_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_full_button_mode" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:id="@+id/discard_changes"
            android:text="@string/discard_changes" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:id="@+id/apply_changes"
            android:text="@string/apply_changes" />


    </LinearLayout>
</LinearLayout>
