<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.masterthesis.personaldata.symptoms.CreatePatientActivity">

    <LinearLayout
        android:id="@+id/no_patient_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_ask_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/male_female"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <ImageButton
                android:layout_width="0dp"
                android:id="@+id/female"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/avatar_maggie2" />

            <ImageButton
                android:layout_width="0dp"
                android:id="@+id/male"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/avatar_jack2" />
        </LinearLayout>

        <Button
            android:id="@+id/save_patient_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:text="@string/save_patient_info" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/add_diary_and_symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.ogaclejapan.smarttablayout.SmartTabLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/viewpagertabCreatePatient"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingBottom="4dp"
            app:stl_defaultTabTextColor="#3F51B5"
            app:stl_defaultTabTextMinWidth="120dp"
            app:stl_indicatorAlwaysInCenter="true"
            app:stl_indicatorColor="@color/accent"
            app:stl_indicatorCornerRadius="1.5dp"
            app:stl_indicatorInterpolation="smart"
            app:stl_indicatorThickness="3dp"
            app:stl_underlineColor="@color/transparent" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpagerCreatePatient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/viewpagertabCreatePatient" />

    </RelativeLayout>


</RelativeLayout>
